Update OperationTypeItemMapper.java